<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/dp3"
    android:layout_marginEnd="@dimen/dp60"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
   >
    <LinearLayout
        android:id="@+id/vL_Bot_File"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_bubble_bot_background"
        android:gravity="center|start"
        android:lineSpacingExtra="@dimen/dp2"
        android:layout_marginTop="@dimen/dp3"
        android:layout_marginBottom="@dimen/dp10"
        android:paddingTop="@dimen/dp4"
        android:paddingBottom="@dimen/dp7"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp20"
        android:textAlignment="gravity"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp7"
            android:paddingEnd="@dimen/dp2"
            android:paddingStart="@dimen/dp2"
            android:paddingBottom="@dimen/dp2"
            android:paddingTop="@dimen/dp2"
            android:background="@color/colorPrimaryLight"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/file_ic"
                android:scaleType="fitXY"
                android:cropToPadding="true"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chat_image" />
            <TextView
                android:id="@+id/vT_Bot_File_Name"
                android:text="@string/financial_awareness_pdf"
                android:maxEms="8"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp2"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp7"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/vT_Bot_File_Type"
                android:text="@string/_12_pages_docx"
                android:textSize="@dimen/sp12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/vT_Bot_File_Time"
                android:text="@string/_2_00pm"
                android:gravity="end"
                android:layout_gravity="end"
                android:textSize="@dimen/sp12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>