<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp3"
    android:layout_marginEnd="@dimen/dp60"
    >
    <LinearLayout
        android:id="@+id/vL_Bot_Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/chat_bubble_bot_background"
        android:lineSpacingExtra="@dimen/dp2"
        android:paddingStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp5"
        android:paddingTop="@dimen/dp5"
        android:paddingBottom="@dimen/dp7"
        android:textIsSelectable="true"
        android:textColor="@color/black"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/vI_Bot_Contact"
            android:layout_width="wrap_content"
            android:src="@drawable/photo_holder"
            android:scaleType="fitXY"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bot_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vT_Bot_Shared_Contact_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="@dimen/dp15"
                android:maxEms="8"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/amt_bangalore_number" />

            <TextView
                android:id="@+id/vT_Bot_Contact_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/_2_00pm"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>