<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp60">


    <LinearLayout
        android:id="@+id/vL_User_Shared_Contact_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp3"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/chat_bubble_user_background"
        android:gravity="center|start"
        android:lineSpacingExtra="@dimen/dp2"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp5"
        android:paddingTop="@dimen/dp4"
        android:paddingEnd="@dimen/dp20"
        android:paddingBottom="@dimen/dp7"
        android:textAlignment="gravity"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/vI_User_Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chat_image"
            android:scaleType="fitXY"
            android:src="@drawable/photo_holder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vT_User_Shared_Contact_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="@dimen/dp15"
                android:maxEms="8"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/amt_bangalore_number" />

            <TextView
                android:id="@+id/vT_User_Contact_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/_2_00pm"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>