<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="@dimen/dp60"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/vL_User_File"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp3"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/chat_bubble_user_background"
        android:gravity="center|start"
        android:lineSpacingExtra="@dimen/dp2"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp4"
        android:paddingTop="@dimen/dp4"
        android:paddingEnd="@dimen/dp20"
        android:paddingBottom="@dimen/dp7"
        android:textAlignment="gravity"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp2"
            android:paddingTop="@dimen/dp2"
            android:paddingEnd="@dimen/dp2"
            android:paddingBottom="@dimen/dp2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/chat_image"
                android:cropToPadding="true"
                android:visibility="gone"
                android:scaleType="fitXY"
                android:id="@+id/iv_document_pic"
                android:src="@drawable/file_ic" />

            <ProgressBar
                android:id="@+id/progress_update"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20" />

            <TextView
                android:id="@+id/vT_User_File_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp2"
                android:ellipsize="end"
                android:lines="1"
                android:maxEms="8"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/financial_awareness_pdf"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vT_User_File_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_pages_docx"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/vT_User_File_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:visibility="invisible"
                android:text="@string/_2_00pm"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>